@@ -1,3 +1,8 @@
+* adding wildcard matching when asterisk exists at end of condition
+
+  :conditions => { :name => "foo*" }
+
+
 *0.2.4* (June 23rd, 2009)
 
 * only create/update record in index if it matches xapit find conditions
